# aionetbox

./: pyproject.toml  tox.ini
.github/: dependabot.yml
aionetbox/: __init__.py  api.py
tests/: fixtures.py  test_api.py
tests/data/: openapi-2.yaml
